--- a/Part1-dplyr_intro.Rmd
+++ b/Part1-dplyr_intro.Rmd
@@ -240,3 +240,13 @@ Determine the top five movies in terms of domestic return on investment for 2013
 ```{r}
 #Space for your answer here.
 ```
+
+
+## What you learned in this section
+
+Different ways in the `dplyr` package to
+
+- 1. choose subsets of data using the `filter()` verb
+- 1. aggregate data to create summaries using the `summarize()` and `group_by` verbs
+- 1. make new variables using the `mutate()` verb
+- 1. sort your data frames using the `arrange()` verb
