--- a/Part1-dplyr_intro.Rmd
+++ b/Part1-dplyr_intro.Rmd
@@ -5,6 +5,7 @@ output:
   html_document:
     code_download: true
     code_folding: hide
+    df_print: paged
 ---
 
 In this section, we'll discuss Data Wrangling/Transformation via the `dplyr` package.  We'll explore ways to
