--- a/Part1-dplyr_intro.Rmd
+++ b/Part1-dplyr_intro.Rmd
@@ -27,6 +27,8 @@ library(gapminder)
 gapminder
 ```
 
+We recommend always checking out your data first before you hop into your analyses. Simply running the name of the object like we have with `gapminder` above is helpful. The `View()` command (note the capital "V"! R is case sensitive!) is also helpful. Try it out with `View(gapminder)`.
+
 Say we wanted mean life expectancy across all years for Asia
 
 ```{r}
@@ -133,10 +135,10 @@ When you'd like to determine a numerical summary for all
 levels of a different categorical variable
 
 ```{r}
-max_exp_1997_by_cont <- gapminder %>% 
+gapminder %>% 
   filter(year == 1997) %>% 
   group_by(continent) %>%
-  summarize(max_exp = max(lifeExp))
+  summarize(max_exp = max(lifeExp)) 
 max_exp_1997_by_cont
 ```
 
@@ -206,7 +208,7 @@ gapminder %>%
 - `glimpse`
 - `rename`
 
-## Your Task
+## Your turn
 
 ### Exercise 1.3
 
@@ -214,12 +216,14 @@ Determine which African country had the highest GDP per capita in 1982 using the
 
 ```{r}
 #Space for your answer here.
-
+gapminder %>% 
+  filter(year == 1982) %>% 
+  filter(continent == "Africa") %>% 
+  arrange(desc(gdpPercap))
 ```
 
-**Challenge**
 
-### Exercise 1.3C
+### Challenge - Exercise 1.3C
 
 For both of these tasks below, use the `bechdel` data frame in the `fivethirtyeight` package:
 
@@ -231,7 +235,7 @@ in 2013 fell into each of the different categories for `clean_test`.
 ---
 
 
-## Your Task
+## Your turn
 
 ### Exercise 1.4
 
